--- a/Views/Map/Map.cshtml
+++ b/Views/Map/Map.cshtml
@@ -26,13 +26,11 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/Vehiculos">Vehiculos</a>
                             </li>
-                            <!-- HTML para el menú desplegable -->
                             <div class="dropdown">
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="estadisticasCocheLink" data-bs-toggle="dropdown" aria-expanded="false">
                                     Estadísticas Coche
                                 </button>
                                 <ul class="dropdown-menu" id="dropdownMenu" aria-labelledby="estadisticasCocheLink">
-                                    <!-- Las matrículas de los coches se agregarán aquí -->
                                 </ul>
                             </div>
                             <li class="nav-item">
@@ -50,12 +48,11 @@
     </div>
     <div class="toast-container"></div>
 
-    <!-- Modal -->
     <div class="modal fade" id="trackerModal" tabindex="-1" aria-labelledby="nuevoProyecto" aria-hidden="true">
         <div class="modal-dialog modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 class="modal-title" id="nuevoProyecto">Nuevo Vehiculo</h2>
+                    <h2 class="modal-title" id="nuevoProyecto"></h2>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -113,11 +110,10 @@
             </div>
         </div>
     </div>
-    <!-- Fin del Modal -->
 
     <script src="https://cdn.jsdelivr.net/npm/ol@v9.1.0/dist/ol.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="~/Scripts/Map.js"></script>
+    <script type="module" src="~/Scripts/Map.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.8/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
