--- a/Views/Vehiculos/Vehiculos.cshtml
+++ b/Views/Vehiculos/Vehiculos.cshtml
@@ -30,57 +30,61 @@
                             <div class="row mb-3">
                                 <div class="form-group col-md-4">
                                     <label for="marca" class="form-label">Marca</label>
-                                    <select class="form-select" id="marca" required>
-                                    </select>
+                                    <select class="form-select" id="marca" required></select>
+                                    <div class="error-message" id="error-marca"></div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label for="modelo" class="form-label">Modelo</label>
                                     <select class="form-select" id="modelo" required>
                                         <option value="">Seleccione una Marca</option>
                                     </select>
+                                    <div class="error-message" id="error-modelo"></div>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label for="año" class="form-label">Año</label>
                                     <select class="form-select" id="año" required>
                                         <option selected>Elige un Año</option>
-                                        <!-- Añade las opciones de años dinámicamente -->
                                     </select>
+                                    <div class="error-message" id="error-año"></div>
                                 </div>
                             </div>
-
                             <div class="row mb-3">
                                 <div class="form-group col-md-6">
                                     <label for="latitud" class="form-label">Latitud</label>
                                     <input type="text" class="form-control" id="latitud">
+                                    <div class="error-message" id="error-latitud"></div>
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="longitud" class="form-label">Longitud</label>
                                     <input type="text" class="form-control" id="longitud">
+                                    <div class="error-message" id="error-longitud"></div>
                                 </div>
                             </div>
-
                             <div class="row mb-3">
                                 <div class="form-group col-md-4">
-                                    <label for="autonomia_total" class="form-label">Autonomia Total</label>
+                                    <label for="autonomia_total" class="form-label">Autonomía Total</label>
                                     <input type="text" class="form-control" id="autonomia_total">
+                                    <div class="error-message" id="error-autonomia_total"></div>
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="autonomia_restante" class="form-label">Autonomia Restante</label>
+                                    <label for="autonomia_restante" class="form-label">Autonomía Restante</label>
                                     <input type="text" class="form-control" id="autonomia_restante">
+                                    <div class="error-message" id="error-autonomia_restante"></div>
                                 </div>
                                 <div class="form-group col-md-4">
-                                    <label for="matricula" class="form-label">Matricula</label>
+                                    <label for="matricula" class="form-label">Matrícula</label>
                                     <input type="text" class="form-control" id="matricula">
+                                    <div class="error-message" id="error-matricula"></div>
                                 </div>
                             </div>
                             <input type="hidden" id="idUsuario">
                         </form>
                     </div>
                 </div>
-
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <input type="hidden" id="idCocheHidden" name="idCoche" value=""> <!-- Aquí -->
+                    <input type="hidden" id="idCocheHidden" name="idCoche" value=""> 
+                    <input type="hidden" id="idUsuarioHidden" name="idUsuario" value="">
                     <button id="crearProyectoBtn" type="button" class="btn btn-primary">Agregar</button>
                 </div>
             </div>
@@ -91,7 +95,6 @@
         <div class="row">
             <div class="col mt-3">
                 <div id="toolbar" class="d-flex justify-content-between">
-                    <!-- Cambiado para añadir espacio entre los botones -->
                     <div>
                         <button id="create" class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#trackerModal">
                              Crear
